Bug 157394 - Inserting cross references doesn't work anymore
Summary: Inserting cross references doesn't work anymore
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:24.2.0 target:7.6.3
Keywords: bibisected, regression
: 155418 157364 157401 157489 159693 (view as bug list)
Depends on:
Blocks: Fields-Cross-Reference
  Show dependency treegraph
 
Reported: 2023-09-23 12:26 UTC by Gabriele Ponzo
Modified: 2024-06-13 05:39 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gabriele Ponzo 2023-09-23 12:26:02 UTC
It looks like it is not possible creating (setting) cross references anymore:

1. Open LibreOffice Writer and type a random word;
2. Select the text just typed;
3. Hit CTRL + F2, go to Cross-References tab and then:
4. Click on "Set Reference";
5. On the "Name" filed type a random (or the same) word;
6. Click on "Insert" button at the bottom right.

Expected (previous) behavior:
The text highlighted on the document should become a reference and as such have a grey background and be listed in the dialog box (CTRL + F2 above)

Actual behavior:
The text is repeated, no reference is created and thus listed.
If you press CTRL + Z twice to Undo, you'll notice a new paragraph looks to have been created and then deleted...

Tested on the PC below and on Franklin's too:
Version: 7.6.1.2 (X86_64) / LibreOffice Community
Build ID: 60(Build:2)
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: it-IT (it_IT.UTF-8); UI: en-GB
Ubuntu package version: 4:7.6.1~rc2-0ubuntu0.20.04.1~lo3
Calc: threaded
Comment 1 m_a_riosv 2023-09-23 14:47:13 UTC
Reproducible with
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b97f7b6bee733e108d8214d5387b2dc019d93d8f
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded Jumbo

regression from
Version: 7.5.7.0.0+ (X86_64) / LibreOffice Community
Build ID: 601dfe1cc547c4ae4a8e87da6d268e04ba445555
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded
Comment 2 BogdanB 2023-09-23 15:45:05 UTC
 42ed24253452df43512d31838b01a59c7ebcf9d1 is the first bad commit
commit 42ed24253452df43512d31838b01a59c7ebcf9d1
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Thu Dec 29 23:57:36 2022 +0100

    source 16075474819696f920979969474aa8300f4af530
    
    source 16075474819696f920979969474aa8300f4af530

 instdir/program/libswlo.so | Bin 23346544 -> 23350792 bytes
 instdir/program/setuprc    |   2 +-
 instdir/program/versionrc  |   2 +-
 3 files changed, 2 insertions(+), 2 deletions(-)

Miklos, please, could you take a look on this?
Comment 3 Franklin Weng 2023-09-23 20:19:18 UTC
*** Bug 157401 has been marked as a duplicate of this bug. ***
Comment 4 Commit Notification 2023-10-04 06:05:51 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4c5f51a7ac4c0f7043ead2b3b48e71c33e16f992

tdf#157394 sw: fix inserting reference mark with existing selection

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-10-04 07:28:00 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/7bd39200c990f93b5b03b18fd863994ad8cfe4a2

tdf#157394 sw: fix inserting reference mark with existing selection

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2023-10-04 07:55:43 UTC
Verified in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4c5f51a7ac4c0f7043ead2b3b48e71c33e16f992
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

@Miklos, thanks for fixing this issue!!
Comment 7 Buovjaga 2023-10-06 13:03:35 UTC
*** Bug 155418 has been marked as a duplicate of this bug. ***
Comment 8 Buovjaga 2023-10-06 13:03:47 UTC
*** Bug 157364 has been marked as a duplicate of this bug. ***
Comment 9 Buovjaga 2023-10-06 13:03:53 UTC
*** Bug 157489 has been marked as a duplicate of this bug. ***
Comment 10 ronniegreer24 2024-02-10 15:34:16 UTC Comment hidden (spam)
Comment 11 Mike Kaganski 2024-06-13 05:39:26 UTC
*** Bug 159693 has been marked as a duplicate of this bug. ***