tdf#157394 sw: fix inserting reference mark with existing selection

Type "myword" in Writer, select it, Insert -> Cross-reference, set Name
to "myname", click Insert. The body text now had "myword" twice, instead
of creating a reference mark on the existing "myword" word.

This went wrong in commit 16075474819696f920979969474aa8300f4af530 (sw,
field insert: handle the Content param for refmarks and accept HTML
there, 2022-12-21), because it assumed that in case the uno comand is
dispatched with some reference text, then that has to be inserted at the
cursor position and only then the refmark can be created on that range.
It was not expected that the current Writer selection would show up as
refmark text.

Fix the problem by taking the refmark text from the uno command
parameter only in case we don't have selection, which restores the old
behavior on manual insert of a refmark and keeps the new uno command
parameter working.

Note that contrary to the bug title, inserting cross-references did
work, but the trouble was the insert of the duplicated word.

Change-Id: I1a8b002c2a6f196975a18e01f0e8c457cfb416bf
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157524
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>